<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn1_white"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/img1_logo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/avengers_logo"/>
    <EditText
        android:id="@+id/et1_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1_logo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:hint="@string/et1_enter_user"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/et2_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1_username"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:hint="@string/et2_enter_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/btn1_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et2_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:background="@color/btn1_orange"
        android:text="@string/btn1_log_in"
        android:textStyle="bold"
        android:textColor="@color/btn1_white"
        android:textSize="16sp"
       />
    <TextView
        android:id="@+id/t1_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1_login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/t1_forgot_password"
        android:textColor="@color/t2_create_account"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/t2_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:text="@string/t2_create_account"
        android:textSize="16sp"
        android:textColor="@color/t1_forgot_pass"
        android:textStyle="italic"/>
</RelativeLayout>